@@ -4,6 +4,9 @@ Changes
 2.0 (unreleased)
 ----------------
 
+- Factor out generally useful methods and properties for view-ish
+  components into components.ViewSupport mixin.
+
 - Works with new Martian (0.12) and grokcore.component 2.0.
 
 - Test fix: support windows paths.
